feat: enhance multilingual support by adding new translations for payment and action statuses in English and Korean

--- a/src/renderer/src/i18n/locales/en.json
+++ b/src/renderer/src/i18n/locales/en.json
@@ -415,6 +415,9 @@
     "updateFailed": "Failed to update",
     "paymentUpdated": "Payment status updated to {{status}}",
     "paymentUpdateFailed": "Failed to update payment status",
+    "markedAsPaid": "Marked as paid",
+    "markedAsUnpaid": "Marked as unpaid",
+    "actionFailed": "Action failed",
     "updateRoomFailed": "Failed to update room",
     "removeParticipantFailed": "Failed to remove participant",
     "moveParticipantFailed": "Failed to move participant",
