--- a/src/renderer/src/i18n/locales/ko.json
+++ b/src/renderer/src/i18n/locales/ko.json
@@ -415,6 +415,9 @@
     "updateFailed": "업데이트에 실패했습니다",
     "paymentUpdated": "납부 상태가 {{status}}(으)로 변경되었습니다",
     "paymentUpdateFailed": "납부 상태 변경에 실패했습니다",
+    "markedAsPaid": "납부 완료로 변경되었습니다",
+    "markedAsUnpaid": "미납으로 변경되었습니다",
+    "actionFailed": "작업에 실패했습니다",
     "updateRoomFailed": "객실 업데이트에 실패했습니다",
     "removeParticipantFailed": "참가자 제거에 실패했습니다",
     "moveParticipantFailed": "참가자 이동에 실패했습니다",
