feat: bus schedules and custom tooltip

--- a/src/renderer/src/i18n/locales/en.json
+++ b/src/renderer/src/i18n/locales/en.json
@@ -48,7 +48,8 @@
     "since": "since",
     "updating": "Updating...",
     "currentStatus": "Current Status",
-    "newStatus": "New Status"
+    "newStatus": "New Status",
+    "allLoaded": "All data loaded"
   },
   "nav": {
     "search": "Search",
@@ -56,6 +57,7 @@
     "groups": "Groups",
     "rooms": "Rooms",
     "statistics": "Statistics",
+    "buses": "Buses",
     "more": "More",
     "importCSV": "Import CSV",
     "auditLog": "Audit Log",
@@ -194,7 +196,16 @@
     "customTags": "Custom Tags",
     "noGroupsFiltered": "No groups match the current filters",
     "filterByTag": "Filter by Tag",
-    "allTags": "All Tags"
+    "allTags": "All Tags",
+    "leader": "Leader",
+    "setLeader": "Set as Leader",
+    "changeLeader": "Change Leader",
+    "removeLeader": "Remove Leader",
+    "leaderInfo": "Leader: {{name}}",
+    "confirmSetLeader": "Set \"{{name}}\" as the group leader?",
+    "confirmRemoveLeader": "Remove group leader assignment?",
+    "leaderSet": "Leader has been set",
+    "leaderRemoved": "Leader assignment removed"
   },
   "room": {
     "title": "Rooms",
@@ -248,7 +259,16 @@
     "typeLeadership": "Leadership",
     "selectGenderType": "Select gender type",
     "selectRoomType": "Select room type",
-    "importHelpTextExtended": "or paste below (room,capacity,genderType,roomType per line)"
+    "importHelpTextExtended": "or paste below (room,capacity,genderType,roomType per line)",
+    "leader": "Room Leader",
+    "setLeader": "Set as Room Leader",
+    "changeLeader": "Change Room Leader",
+    "removeLeader": "Remove Room Leader",
+    "leaderInfo": "Room Leader: {{name}}",
+    "confirmSetLeader": "Set \"{{name}}\" as the room leader?",
+    "confirmRemoveLeader": "Remove room leader assignment?",
+    "leaderSet": "Room leader has been set",
+    "leaderRemoved": "Room leader assignment removed"
   },
   "statistics": {
     "title": "Statistics",
@@ -450,5 +470,82 @@
     "download": "Download",
     "print": "Print",
     "printTitle": "QR Badge"
+  },
+  "bus": {
+    "title": "Bus Management",
+    "subtitle": "Manage regional bus transportation information",
+    "addBus": "Add Bus",
+    "addNewBus": "Add New Bus",
+    "busName": "Bus Name",
+    "busNamePlaceholder": "e.g., Seoul Bus 1",
+    "region": "Region",
+    "regionPlaceholder": "e.g., Seoul",
+    "departureLocation": "Departure Location",
+    "departureLocationPlaceholder": "e.g., Seoul Station Plaza",
+    "estimatedArrival": "Estimated Arrival",
+    "arrivalTime": "Arrival Time",
+    "contactName": "Contact Person",
+    "contactNamePlaceholder": "Contact name",
+    "contactPhone": "Contact Phone",
+    "contactPhonePlaceholder": "010-0000-0000",
+    "notes": "Notes",
+    "notesPlaceholder": "Enter additional information...",
+    "noBuses": "No buses registered",
+    "noBusesDesc": "Add buses to manage regional transportation",
+    "busCreated": "Bus \"{{name}}\" created",
+    "busDeleted": "Bus \"{{name}}\" deleted",
+    "busUpdated": "Bus information updated",
+    "confirmDelete": "Delete bus \"{{name}}\"?",
+    "confirmDeleteWithParticipants": "Delete bus \"{{name}}\"? {{count}} participants will be unassigned.",
+    "nameRegionRequired": "Bus name and region are required",
+    "filterByRegion": "Filter by Region",
+    "busCount": " buses",
+    "passengers": "Passengers",
+    "passengerList": "Passenger List",
+    "contact": "Contact",
+    "noPassengers": "No passengers",
+    "noPassengersDesc": "Assign participants to this bus from their detail page",
+    "busNotFound": "Bus not found",
+    "backToBuses": "Back to buses",
+    "participantRemoved": "Participant removed from bus",
+    "confirmRemoveParticipant": "Remove \"{{name}}\" from this bus?",
+    "moveSelected": "Move {{count}}",
+    "moveToBus": "Move {{count}} participant(s) to another bus",
+    "movedToBus": "{{count}} participant(s) moved to {{name}}",
+    "noOtherBuses": "No other buses available",
+    "people": " people",
+    "from": "From",
+    "checkedIn": "Checked In",
+    "loadFailed": "Failed to load buses",
+    "timelineView": "By Arrival Time",
+    "regionView": "By Region",
+    "arrivalSchedule": "Arrival Schedule",
+    "sortedByArrival": "Sorted by estimated arrival time",
+    "noTime": "No time set",
+    "markAsArrived": "Mark as Arrived",
+    "cancelArrival": "Cancel Arrival",
+    "arrived": "Arrived",
+    "arrivedAt": "Arrival Time",
+    "confirmMarkArrived": "Has \"{{name}}\" bus arrived?",
+    "confirmCancelArrival": "Cancel the arrival status?",
+    "busArrived": "Bus has arrived",
+    "arrivalCancelled": "Arrival status cancelled",
+    "showArrivedBuses": "Show Arrived Buses",
+    "hideArrivedBuses": "Hide Arrived Buses"
+  },
+  "print": {
+    "roomAssignment": "Room Assignment",
+    "groupRoster": "Group Roster",
+    "busManifest": "Bus Manifest",
+    "printThisBus": "Print This Bus",
+    "totalRooms": "Total Rooms",
+    "totalAssigned": "Total Assigned",
+    "totalCapacity": "Total Capacity",
+    "totalGroups": "Total Groups",
+    "totalMembers": "Total Members",
+    "totalRegions": "Total Regions",
+    "totalBuses": "Total Buses",
+    "totalPassengers": "Total Passengers",
+    "printedAt": "Printed at"
   }
 }
