--- a/src/renderer/src/i18n/locales/ko.json
+++ b/src/renderer/src/i18n/locales/ko.json
@@ -48,7 +48,8 @@
     "since": "부터",
     "updating": "업데이트 중...",
     "currentStatus": "현재 상태",
-    "newStatus": "새 상태"
+    "newStatus": "새 상태",
+    "allLoaded": "모든 데이터를 불러왔습니다"
   },
   "nav": {
     "search": "검색",
@@ -56,6 +57,7 @@
     "groups": "그룹",
     "rooms": "객실",
     "statistics": "통계",
+    "buses": "버스",
     "more": "더보기",
     "importCSV": "CSV 가져오기",
     "auditLog": "변경 이력",
@@ -194,7 +196,16 @@
     "customTags": "커스텀 태그",
     "noGroupsFiltered": "현재 필터에 맞는 그룹이 없습니다",
     "filterByTag": "태그 필터",
-    "allTags": "전체 태그"
+    "allTags": "전체 태그",
+    "leader": "조장",
+    "setLeader": "조장 지정",
+    "changeLeader": "조장 변경",
+    "removeLeader": "조장 해제",
+    "leaderInfo": "조장: {{name}}",
+    "confirmSetLeader": "\"{{name}}\"님을 조장으로 지정하시겠습니까?",
+    "confirmRemoveLeader": "조장 지정을 해제하시겠습니까?",
+    "leaderSet": "조장이 지정되었습니다",
+    "leaderRemoved": "조장 지정이 해제되었습니다"
   },
   "room": {
     "title": "객실",
@@ -248,7 +259,16 @@
     "typeLeadership": "리더십",
     "selectGenderType": "성별 구분 선택",
     "selectRoomType": "객실 유형 선택",
-    "importHelpTextExtended": "또는 아래에 붙여넣으세요 (객실번호,수용인원,성별구분,유형 형식)"
+    "importHelpTextExtended": "또는 아래에 붙여넣으세요 (객실번호,수용인원,성별구분,유형 형식)",
+    "leader": "방장",
+    "setLeader": "방장 지정",
+    "changeLeader": "방장 변경",
+    "removeLeader": "방장 해제",
+    "leaderInfo": "방장: {{name}}",
+    "confirmSetLeader": "\"{{name}}\"님을 방장으로 지정하시겠습니까?",
+    "confirmRemoveLeader": "방장 지정을 해제하시겠습니까?",
+    "leaderSet": "방장이 지정되었습니다",
+    "leaderRemoved": "방장 지정이 해제되었습니다"
   },
   "statistics": {
     "title": "통계",
@@ -450,5 +470,82 @@
     "download": "다운로드",
     "print": "인쇄",
     "printTitle": "QR 명찰"
+  },
+  "bus": {
+    "title": "버스 관리",
+    "subtitle": "지역별 버스 이동 정보를 관리합니다",
+    "addBus": "버스 추가",
+    "addNewBus": "새 버스 추가",
+    "busName": "버스 이름",
+    "busNamePlaceholder": "예: 서울 1호차",
+    "region": "지역",
+    "regionPlaceholder": "예: 서울",
+    "departureLocation": "출발 장소",
+    "departureLocationPlaceholder": "예: 서울역 광장",
+    "estimatedArrival": "예정 도착 시간",
+    "arrivalTime": "도착 예정",
+    "contactName": "인솔자",
+    "contactNamePlaceholder": "인솔자 이름",
+    "contactPhone": "연락처",
+    "contactPhonePlaceholder": "010-0000-0000",
+    "notes": "메모",
+    "notesPlaceholder": "추가 정보를 입력하세요...",
+    "noBuses": "등록된 버스가 없습니다",
+    "noBusesDesc": "버스를 추가하여 지역별 이동 정보를 관리하세요",
+    "busCreated": "\"{{name}}\" 버스가 생성되었습니다",
+    "busDeleted": "\"{{name}}\" 버스가 삭제되었습니다",
+    "busUpdated": "버스 정보가 업데이트되었습니다",
+    "confirmDelete": "\"{{name}}\" 버스를 삭제하시겠습니까?",
+    "confirmDeleteWithParticipants": "\"{{name}}\" 버스를 삭제하시겠습니까? {{count}}명의 참가자가 배정 해제됩니다.",
+    "nameRegionRequired": "버스 이름과 지역은 필수입니다",
+    "filterByRegion": "지역 필터",
+    "busCount": "대",
+    "passengers": "탑승자",
+    "passengerList": "탑승자 명단",
+    "contact": "인솔자",
+    "noPassengers": "탑승자가 없습니다",
+    "noPassengersDesc": "참가자 상세 페이지에서 버스를 배정할 수 있습니다",
+    "busNotFound": "버스를 찾을 수 없습니다",
+    "backToBuses": "버스 목록으로",
+    "participantRemoved": "참가자가 버스에서 제거되었습니다",
+    "confirmRemoveParticipant": "\"{{name}}\"님을 버스에서 제거하시겠습니까?",
+    "moveSelected": "{{count}}명 이동",
+    "moveToBus": "{{count}}명의 참가자를 다른 버스로 이동",
+    "movedToBus": "{{count}}명이 {{name}}(으)로 이동되었습니다",
+    "noOtherBuses": "다른 버스가 없습니다",
+    "people": "명",
+    "from": "출발",
+    "checkedIn": "체크인",
+    "loadFailed": "버스 목록을 불러오는데 실패했습니다",
+    "timelineView": "도착 시간순",
+    "regionView": "지역별",
+    "arrivalSchedule": "도착 스케줄",
+    "sortedByArrival": "예정 도착 시간 순으로 정렬되었습니다",
+    "noTime": "시간 미정",
+    "markAsArrived": "도착 표시",
+    "cancelArrival": "도착 취소",
+    "arrived": "도착완료",
+    "arrivedAt": "도착 시간",
+    "confirmMarkArrived": "\"{{name}}\" 버스가 도착했습니까?",
+    "confirmCancelArrival": "도착 표시를 취소하시겠습니까?",
+    "busArrived": "버스가 도착했습니다",
+    "arrivalCancelled": "도착 표시가 취소되었습니다",
+    "showArrivedBuses": "도착한 버스 표시",
+    "hideArrivedBuses": "도착한 버스 숨김"
+  },
+  "print": {
+    "roomAssignment": "객실 배정표",
+    "groupRoster": "그룹 명단",
+    "busManifest": "버스 탑승 명단",
+    "printThisBus": "이 버스 출력",
+    "totalRooms": "총 객실",
+    "totalAssigned": "배정 인원",
+    "totalCapacity": "총 수용 인원",
+    "totalGroups": "총 그룹",
+    "totalMembers": "총 멤버",
+    "totalRegions": "총 지역",
+    "totalBuses": "총 버스",
+    "totalPassengers": "총 탑승자",
+    "printedAt": "출력 일시"
   }
 }
