feat: added additional qr code generate method

--- a/src/renderer/src/i18n/locales/en.json
+++ b/src/renderer/src/i18n/locales/en.json
@@ -91,6 +91,9 @@
     "other": "Other",
     "unknown": "Unknown",
     "age": "Age",
+    "birthDate": "Birth Date",
+    "uniqueKey": "Unique Key",
+    "noBirthDateForKey": "Enter birth date to generate unique key",
     "ward": "Ward",
     "stake": "Stake",
     "group": "Group",
@@ -302,7 +305,7 @@
     "subtitle": "Import participants from a CSV file",
     "selectFile": "Click to select a CSV file",
     "requiredColumns": "Required columns: name, email",
-    "optionalColumns": "Optional: gender, age, stake, ward, phoneNumber, groupName, roomNumber",
+    "optionalColumns": "Optional: gender, age, birthDate, stake, ward, phoneNumber, groupName, roomNumber",
     "preview": "Preview",
     "recordsReady": "records ready to import",
     "fieldMapping": "Field Mapping",
@@ -467,6 +470,7 @@
     "feature1": "Quick check-in from mobile devices",
     "feature2": "Download and print",
     "feature3": "Use on participant badges",
+    "feature4": "Search by unique key",
     "download": "Download",
     "print": "Print",
     "printTitle": "QR Badge"
