--- a/src/renderer/src/i18n/locales/ko.json
+++ b/src/renderer/src/i18n/locales/ko.json
@@ -91,6 +91,9 @@
     "other": "기타",
     "unknown": "미지정",
     "age": "나이",
+    "birthDate": "생년월일",
+    "uniqueKey": "고유 키",
+    "noBirthDateForKey": "고유 키 생성을 위해 생년월일을 입력하세요",
     "ward": "와드",
     "stake": "스테이크",
     "group": "그룹",
@@ -302,7 +305,7 @@
     "subtitle": "CSV 파일에서 참가자를 가져옵니다",
     "selectFile": "CSV 파일을 선택하려면 클릭하세요",
     "requiredColumns": "필수 열: name, email",
-    "optionalColumns": "선택 사항: gender, age, stake, ward, phoneNumber, groupName, roomNumber",
+    "optionalColumns": "선택 사항: gender, age, birthDate, stake, ward, phoneNumber, groupName, roomNumber",
     "preview": "미리보기",
     "recordsReady": "개의 레코드를 가져올 준비가 되었습니다",
     "fieldMapping": "필드 매핑",
@@ -467,6 +470,7 @@
     "feature1": "모바일 기기에서 빠른 체크인",
     "feature2": "다운로드 후 인쇄 가능",
     "feature3": "참가자 명찰에 사용",
+    "feature4": "고유 키로 검색 가능",
     "download": "다운로드",
     "print": "인쇄",
     "printTitle": "QR 명찰"
