--- a/src/renderer/src/i18n/locales/en.json
+++ b/src/renderer/src/i18n/locales/en.json
@@ -58,6 +58,7 @@
     "rooms": "Rooms",
     "statistics": "Statistics",
     "buses": "Buses",
+    "schedule": "Schedule",
     "more": "More",
     "importCSV": "Import CSV",
     "auditLog": "Audit Log",
@@ -415,7 +416,16 @@
     "step4": "Scroll down to \"Your apps\" section",
     "step5": "If no web app exists, click \"Add app\" and select Web",
     "step6": "Download or copy the config as a JSON file",
-    "exampleJsonFormat": "Example JSON format:"
+    "exampleJsonFormat": "Example JSON format:",
+    "eventPeriod": "Event Period",
+    "eventPeriodDesc": "Set the start and end date of your event/conference to quickly apply to the schedule",
+    "eventStartDate": "Start Date",
+    "eventEndDate": "End Date",
+    "currentEventPeriod": "Current Period",
+    "eventPeriodSaved": "Event period has been saved",
+    "eventPeriodCleared": "Event period has been cleared",
+    "eventPeriodRequired": "Please enter both start and end dates",
+    "eventPeriodInvalid": "End date must be after start date"
   },
   "validation": {
     "required": "This field is required",
@@ -536,6 +546,52 @@
     "arrivalCancelled": "Arrival status cancelled",
     "showArrivedBuses": "Show Arrived Buses",
     "hideArrivedBuses": "Hide Arrived Buses"
+  },
+  "schedule": {
+    "title": "Schedule",
+    "subtitle": "Manage events and schedules",
+    "addSchedule": "Add Schedule",
+    "editSchedule": "Edit Schedule",
+    "weekView": "Week",
+    "dayView": "Day",
+    "customView": "Custom",
+    "startDate": "Start Date",
+    "endDate": "End Date",
+    "days": " days",
+    "daysSelected": "days selected",
+    "eventPeriod": "Event",
+    "verticalView": "Vertical View",
+    "horizontalView": "Timeline View",
+    "today": "Today",
+    "previous": "Previous",
+    "next": "Next",
+    "startTime": "Start Time",
+    "endTime": "End Time",
+    "location": "Location",
+    "locationPlaceholder": "Enter location",
+    "description": "Description",
+    "descriptionPlaceholder": "Enter description...",
+    "color": "Color",
+    "autoColor": "Auto",
+    "titlePlaceholder": "Event title",
+    "quickAddPlaceholder": "Enter event title",
+    "moreOptions": "More Options",
+    "quickAddHint": "Press Enter to save quickly",
+    "timeAdjustHint": "adjust time",
+    "totalEvents": "Total Events",
+    "dragHint": "Drag to select time or click to add an event",
+    "confirmDelete": "Delete Schedule",
+    "confirmDeleteDesc": "Are you sure you want to delete this event? This action cannot be undone.",
+    "export": "Export",
+    "exportPDF": "Export as PDF",
+    "exportViewPDF": "Export Full Schedule as PDF",
+    "exportCSV": "Export as CSV",
+    "exportICS": "Calendar File (ICS)",
+    "copyToClipboard": "Copy as Text",
+    "exportSuccess": "Export completed successfully",
+    "copiedToClipboard": "Copied to clipboard",
+    "copyFailed": "Failed to copy",
+    "invalidTimeRange": "End time must be after start time"
   },
   "print": {
     "roomAssignment": "Room Assignment",
