--- a/src/renderer/src/i18n/locales/ko.json
+++ b/src/renderer/src/i18n/locales/ko.json
@@ -58,6 +58,7 @@
     "rooms": "객실",
     "statistics": "통계",
     "buses": "버스",
+    "schedule": "스케줄",
     "more": "더보기",
     "importCSV": "CSV 가져오기",
     "auditLog": "변경 이력",
@@ -415,7 +416,16 @@
     "step4": "\"내 앱\" 섹션으로 스크롤",
     "step5": "웹 앱이 없으면 \"앱 추가\"를 클릭하고 웹 선택",
     "step6": "설정을 JSON 파일로 다운로드 또는 복사",
-    "exampleJsonFormat": "JSON 형식 예시:"
+    "exampleJsonFormat": "JSON 형식 예시:",
+    "eventPeriod": "대회 기간",
+    "eventPeriodDesc": "대회/행사의 시작일과 종료일을 설정하면 스케줄에서 빠르게 적용할 수 있습니다",
+    "eventStartDate": "시작일",
+    "eventEndDate": "종료일",
+    "currentEventPeriod": "현재 설정된 기간",
+    "eventPeriodSaved": "대회 기간이 저장되었습니다",
+    "eventPeriodCleared": "대회 기간 설정이 초기화되었습니다",
+    "eventPeriodRequired": "시작일과 종료일을 모두 입력해주세요",
+    "eventPeriodInvalid": "종료일은 시작일보다 늦어야 합니다"
   },
   "validation": {
     "required": "필수 항목입니다",
@@ -536,6 +546,52 @@
     "arrivalCancelled": "도착 표시가 취소되었습니다",
     "showArrivedBuses": "도착한 버스 표시",
     "hideArrivedBuses": "도착한 버스 숨김"
+  },
+  "schedule": {
+    "title": "스케줄",
+    "subtitle": "이벤트 및 일정을 관리합니다",
+    "addSchedule": "스케줄 추가",
+    "editSchedule": "스케줄 수정",
+    "weekView": "주간",
+    "dayView": "일간",
+    "customView": "기간 설정",
+    "startDate": "시작일",
+    "endDate": "종료일",
+    "days": "일",
+    "daysSelected": "일 선택됨",
+    "eventPeriod": "대회 기간",
+    "verticalView": "세로 보기",
+    "horizontalView": "타임라인 보기",
+    "today": "오늘",
+    "previous": "이전",
+    "next": "다음",
+    "startTime": "시작 시간",
+    "endTime": "종료 시간",
+    "location": "장소",
+    "locationPlaceholder": "장소를 입력하세요",
+    "description": "설명",
+    "descriptionPlaceholder": "일정에 대한 설명을 입력하세요...",
+    "color": "색상",
+    "autoColor": "자동",
+    "titlePlaceholder": "일정 제목",
+    "quickAddPlaceholder": "일정 제목을 입력하세요",
+    "moreOptions": "상세 설정",
+    "quickAddHint": "Enter로 빠른 저장",
+    "timeAdjustHint": "시간 조정",
+    "totalEvents": "총 일정",
+    "dragHint": "드래그하여 시간대를 선택하거나 클릭하여 일정을 추가하세요",
+    "confirmDelete": "스케줄 삭제",
+    "confirmDeleteDesc": "이 일정을 삭제하시겠습니까? 이 작업은 되돌릴 수 없습니다.",
+    "export": "내보내기",
+    "exportPDF": "PDF로 내보내기",
+    "exportViewPDF": "전체 스케줄 PDF로 내보내기",
+    "exportCSV": "CSV로 내보내기",
+    "exportICS": "캘린더 파일 (ICS)",
+    "copyToClipboard": "텍스트로 복사",
+    "exportSuccess": "내보내기가 완료되었습니다",
+    "copiedToClipboard": "클립보드에 복사되었습니다",
+    "copyFailed": "복사에 실패했습니다",
+    "invalidTimeRange": "종료 시간은 시작 시간보다 늦어야 합니다"
   },
   "print": {
     "roomAssignment": "객실 배정표",
